Fixing CardList layout on mobile and adding animation to skill component only when it is in viewport
Fixing CardList layout on mobile and adding animation to skill component only when it is in viewport

--- a/src/components/CardList/Card/Card.module.css
+++ b/src/components/CardList/Card/Card.module.css
@@ -10,6 +10,14 @@
     position: relative;
 }
 
+.CardContainer {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .ImageContainer {
     position: absolute;
     top: 0;
@@ -33,6 +41,7 @@
 .ContentContainer h3 {
     position: absolute;
     top: -10px;
+    margin: 0;
 }
 .ContentContainer button {
     position: absolute;
@@ -54,6 +63,18 @@
 .Card:hover .ContentContainer {
     opacity: 1;
     transition: all 0.5s ease-in;
+}
+
+@media only screen and (max-width: 600px) {
+    .SmallCard {
+        height: 110px;
+        width: 45%;
+        margin: 5px;
+    }
+
+    .SmallCard .ContentContainer h3 {
+        font-size: 12px;
+    }
 }
 
 @media only screen and (min-width: 600px) {
